[project]
name = "westminster-airport-catchment"
version = "0.2.0"
description = "Multi-airport catchment area analysis for the London airport system (LHR, LGW, LTN)."
authors = [{ name = "Daniel Hernandez Gramajo" }]
readme = "README.md"
requires-python = ">=3.10"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
